--- a/advertiser/advertiser.links.action.yml
+++ b/advertiser/advertiser.links.action.yml
@@ -1,6 +1,11 @@
+# All action links for this module
+
 advertiser.advertiser_add:
+  # Which route will be called by the link
   route_name: advertiser.advertiser_add
   title: 'Add advertiser'
+
+  # Where will the link appear, defined by route name.
   appears_on:
     - entity.advertiser.collection
     - entity.advertiser.canonical
