--- a/advertiser/advertiser.routing.yml
+++ b/advertiser/advertiser.routing.yml
@@ -1,41 +1,60 @@
+# Route name can be used in several places; e.g. links, redirects, and local
+# actions.
 entity.advertiser.canonical:
   path: '/advertiser/{advertiser}'
   defaults:
+    # Calls the view controller, defined in the annotation of the advertiser
+    # entity. This marks this route as belonging to this entity type.
     _entity_view: 'advertiser'
     _title: 'Advertiser content'
   requirements:
+    # Calls the access controller of the entity, passing in the suffix ('view')
+    # as the $operation parameter to checkAccess().
     _entity_access: 'advertiser.view'
 
 entity.advertiser.collection:
   path: '/test8'
   defaults:
+    # Calls the list controller, defined in the annotation of the advertiser
+    # entity.
     _entity_list: 'advertiser'
     _title: 'Advertiser list'
   requirements:
+    # Checks for permission directly.
     _permission: 'view advertiser entity'
 
 advertiser.advertiser_add:
   path: '/advertiser/add'
   defaults:
+    # Calls the form.add controller, defined in the advertiser entity.
     _entity_form: advertiser.default
     _title: 'Add advertiser'
   requirements:
+    # Use the entity's access controller. _entity_create_access tells the router
+    # to use the access controller's checkCreateAccess() method instead of
+    # checkAccess().
     _entity_create_access: 'advertiser'
 
 entity.advertiser.edit_form:
   path: '/advertiser/{advertiser}/edit'
   defaults:
+    # Calls the form.edit controller, defined in the advertiser entity.
     _entity_form: advertiser.default
     _title: 'Edit advertiser'
   requirements:
+    # Calls the access controller of the entity, passing in the suffix
+    # ('update') as the $operation parameter to checkAccess().
     _entity_access: 'advertiser.update'
 
 entity.advertiser.delete_form:
   path: '/advertiser/{advertiser}/delete'
   defaults:
+    # Calls the form.delete controller, defined in the advertiser entity.
     _entity_form: advertiser.delete
     _title: 'Delete advertiser'
   requirements:
+    # Calls the access controller of the entity, passing in the suffix
+    # ('delete') as the $operation parameter to checkAccess().
     _entity_access: 'advertiser.delete'
 
 advertiser.advertiser_settings:
